充值、登录、提现、排行、个人中心页面修改